[tool.poetry]
name = "generators"
version = "0.0.03"
description = ""
authors = ["Andrey Nikolaevich Korenyuk <korenyuk.a.n@mail.ru>"]
readme = "README.md"
packages = [{include = "generators"}]

[tool.poetry.dependencies]
python = "^3.9"
dependency-injector = "^4.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
