[metadata]
name = generators
version = 0.0.3
description = Пакет с генераторами последовательностей
author = Andrey Nikolaevich Korenyuk
author_email = korenyuk.a.n@mail.ru
url = https://github.com/sad-engineer/generators
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.9
install_requires =
    dependency-injector>=4.46.0

[options.packages.find]
exclude =
    tests
    tests.*
    docs
    docs.*
